# jokoway

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Dockerfile.alpine  Justfile  README.md  cliff.toml  jokoway.yml
.cargo/: audit.toml
.github/workflows/: audit.yml  ci.yml
config/: httpbin.yml  jokoway.yml
examples/: README.md
examples/dynamic/: README.md  compose.yml  jokoway.yml
examples/grpc/: Cargo.toml  Dockerfile  README.md  docker-compose.yml  helloworld_pb2.py  helloworld_pb2_grpc.py  jokoway.yml  requirements.txt  server.py
examples/grpc/client/: package-lock.json  package.json
examples/grpc/client/src/: App.tsx
examples/grpc/proto/: helloworld.proto
examples/httpbin/: README.md  compose.yml  jokoway.yml
examples/httpbin/deploy/: README.md  compose.yml  jokoway.yml
jokoway/: Cargo.toml
jokoway-acme/: Cargo.toml  README.md
jokoway-acme/src/: lib.rs  prelude.rs  tls.rs
jokoway-compress/: Cargo.toml  README.md
jokoway-compress/src/: lib.rs  prelude.rs
jokoway-core/: Cargo.toml
jokoway-core/src/: error.rs  grpc.rs  lib.rs  prelude.rs  tls.rs  websocket.rs
jokoway-core/src/config/: builder.rs  mod.rs  models.rs
jokoway-core/tests/: strict_config_test.rs
jokoway-forwarded/: Cargo.toml  README.md
jokoway-forwarded/src/: config.rs  lib.rs  middleware.rs  models.rs  parser.rs  prelude.rs
jokoway-rules/: Cargo.toml
jokoway-rules/src/: lib.rs  matcher.rs  parser.rs  prelude.rs  registry.rs
jokoway-transformer/: Cargo.toml
jokoway-transformer/src/: lib.rs  models.rs  parser.rs  prelude.rs  registry.rs
jokoway/src/: cli.rs  error.rs  lib.rs  prelude.rs
jokoway/src/config/: builder.rs  mod.rs  models.rs
jokoway/src/extensions/: acme.rs  api.rs  compress.rs  dns.rs  http.rs  https.rs  metrics.rs  mod.rs
jokoway/src/router/: registry.rs
jokoway/src/server/: app.rs  context.rs  discovery.rs  extension.rs  health.rs  mod.rs  proxy.rs  router.rs  service.rs  upstream.rs
jokoway/src/transformer/: mod.rs  parser.rs  registry.rs
jokoway/tests/: acme_test.rs  api_test.rs  compression_test.rs  forwarded_test.rs  middleware_test.rs  proxy_test.rs
jokoway/tests/common/: mod.rs
jokoway/tests/pebble/: README.md  compose.yml  gen_certs.sh  pebble-config.json
