[workspace]
members = [
    "jokoway-core",
    "jokoway",
    "jokoway-acme",
    "jokoway-compress",
    "jokoway-rules",
    "jokoway-transformer",
]
resolver = "2"

[profile.release]
opt-level = 3     # Maximum optimization for speed
lto = "fat"
codegen-units = 1
strip = true      # Strip symbols to reduce binary size
panic = "abort"   # Smaller binaries, slightly faster
