[workspace]
members = [
    "jokoway-core",
    "jokoway",
    "jokoway-acme",
    "jokoway-compress",
    "jokoway-rules",
    "jokoway-transformer",
]
resolver = "2"

[workspace.dependencies]
pingora = { version = "0.7.0", features = ["lb", "proxy", "boringssl"] }
async-trait = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_yaml = "0.9"
serde_json = "1.0"
http = "1.4.0"
arc-swap = "1.8.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
rcgen = "0.14.7"
log = "0.4.29"
env_logger = "0.11.8"
dashmap = "6.1.0"
x509-parser = "0.18.0"
boring = "4"
flate2 = "1.1.9"
hickory-resolver = { version = "0.24", features = [
    "tokio",
    "tokio-runtime",
    "system-config",
] }
axum = "0.8"
tower_governor = "0.8"
base64 = "0.22"
utoipa = { version = "5.4.0", features = ["axum_extras", "yaml"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "vendored"] }
regex = "1.12.2"
winnow = "0.7.3"
once_cell = "1.21.3"

[profile.release]
opt-level = 3     # Maximum optimization for speed
lto = "fat"
codegen-units = 1
strip = true      # Strip symbols to reduce binary size
panic = "abort"   # Smaller binaries, slightly faster
