[package]
name = "jokoway-acme"
version = "0.1.0-alpha.5"
edition = "2024"
license = "MIT"
authors = ["Hijriyan <april@kuli.dev>"]
repository = "https://github.com/hijriyan/jokoway"
description = "ACME (Let's Encrypt) extension for Jokoway"

[dependencies]
jokoway-core = { path = "../jokoway-core", version = "0.1.0-alpha.5" }
jokoway-rules = { path = "../jokoway-rules", version = "0.1.0-alpha.2" }
instant-acme = "0.8.4"
pingora = { workspace = true }
async-trait = { workspace = true }
tokio = { workspace = true }
log = { workspace = true }
boring = { workspace = true }
dashmap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
x509-parser = { workspace = true }
rcgen = { workspace = true }
arc-swap = { workspace = true }
bytes = { workspace = true }
serde_yaml = { workspace = true }
hyper-rustls = { version = "0.27", default-features = false, features = [
    "http1",
    "http2",
    "tls12",
    "ring",
    "logging",
    "native-tokio",
], optional = true }
rustls = { version = "0.23", default-features = false, features = [
    "ring",
    "logging",
    "std",
    "tls12",
], optional = true }
hyper-util = { version = "0.1", features = [
    "client",
    "client-legacy",
], optional = true }

[features]
default = []
pebble_tests = ["dep:hyper-rustls", "dep:rustls", "dep:hyper-util"]
