[package]
name = "jokoway-compress"
version = "0.1.0-alpha.2"
edition = "2024"
license = "MIT"
authors = ["Hijriyan <april@kuli.dev>"]
repository = "https://github.com/hijriyan/jokoway"
description = "Compression extension for Jokoway API Gateway"

[dependencies]
jokoway-core = { path = "../jokoway-core", version = "0.1.0-alpha.1" }
pingora = { version = "0.7.0", default-features = false, features = ["proxy"] }
async-trait = "0.1"
bytes = "1"
log = "0.4"
flate2 = "1.0"

# Optional dependencies
zstd = { version = "0.13", optional = true }
brotli = { version = "6", optional = true }

[features]
default = []
zstd = ["dep:zstd"]
brotli = ["dep:brotli"]
