[package]
name = "jokoway-compress"
version = "0.1.0-alpha.5"
edition = "2024"
license = "MIT"
authors = ["Hijriyan <april@kuli.dev>"]
repository = "https://github.com/hijriyan/jokoway"
description = "Compression extension for Jokoway API Gateway"

[dependencies]
jokoway-core = { path = "../jokoway-core", version = "0.1.0-alpha.5" }
pingora = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
log = { workspace = true }
flate2 = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }

# Optional dependencies
zstd = { version = "0.13", optional = true }
brotli = { version = "6", optional = true }

[features]
default = []
zstd = ["dep:zstd"]
brotli = ["dep:brotli"]
