[package]
name = "jokoway-core"
version = "0.1.0-alpha.5"
edition = "2024"
license = "MIT"
authors = ["Hijriyan <april@kuli.dev>"]
repository = "https://github.com/hijriyan/jokoway"
description = "Core traits and types for Jokoway API Gateway"

[dependencies]
pingora = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
arc-swap = { workspace = true }
boring = { workspace = true }
flate2 = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }

# optional dependencies
utoipa = { workspace = true, optional = true }

[features]
api-extension = ["dep:utoipa"]

[dev-dependencies]
tempfile = "3.25.0"
