[package]
name = "jokoway-rules"
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT"
authors = ["Hijriyan <april@kuli.dev>"]
description = "Routing rules logic for Jokoway"
repository = "https://github.com/hijriyan/jokoway"

[dependencies]
pingora = "0.7.0"
regex = "1.12.2"
winnow = "0.7.3"
dashmap = "6.1.0"
once_cell = "1.21.3"
arc-swap = "1.8.0"
log = "0.4.29"
psl = "2"

[dev-dependencies]
pingora = "0.7.0"
