[package]
name = "jokoway-rules"
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT"
authors = ["Hijriyan <april@kuli.dev>"]
description = "Routing rules logic for Jokoway"
repository = "https://github.com/hijriyan/jokoway"

[dependencies]
pingora = { workspace = true }
regex = { workspace = true }
winnow = { workspace = true }
dashmap = { workspace = true }
once_cell = { workspace = true }
arc-swap = { workspace = true }
log = { workspace = true }
psl = "2"

[dev-dependencies]
pingora = "0.7.0"
