[package]
name = "jokoway-transformer"
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT"
description = "Request and response transformer library for Jokoway API Gateway"
authors = ["Hijriyan <april@kuli.dev>"]
repository = "https://github.com/hijriyan/jokoway"

[dependencies]
pingora = { version = "0.7.0", features = ["lb", "proxy", "openssl"] }
http = "1.4.0"
url = "2.5.8"
regex = "1.12.2"
winnow = "0.7.3"
arc-swap = "1.8.0"
once_cell = "1.21.3"
