[package]
name = "jokoway-transformer"
version = "0.1.0-alpha.1"
edition = "2024"
license = "MIT"
description = "Request and response transformer library for Jokoway API Gateway"
authors = ["Hijriyan <april@kuli.dev>"]
repository = "https://github.com/hijriyan/jokoway"

[dependencies]
pingora = { workspace = true }
http = { workspace = true }
url = "2.5.8"
regex = { workspace = true }
winnow = { workspace = true }
arc-swap = { workspace = true }
once_cell = { workspace = true }
