[package]
name = "jokoway"
version = "0.1.0-alpha.2"
edition = "2024"
license = "MIT"
description = "Jokoway is a high-performance API Gateway built on Pingora (Rust) with dead-simple YAML configs. Inspired by Traefik’s expressive routing rules and Kong’s DB-less declarative configuration model."
authors = ["Hijriyan <april@kuli.dev>"]
readme = "../README.md"
repository = "https://github.com/hijriyan/jokoway"

[dependencies]
jokoway-core = { path = "../jokoway-core", version = "0.1.0-alpha.1" }
jokoway-compress = { path = "../jokoway-compress", version = "0.1.0-alpha.1" }
jokoway-rules = { path = "../jokoway-rules", version = "0.1.0-alpha.1" }
jokoway-transformer = { path = "../jokoway-transformer", version = "0.1.0-alpha.1" }
pingora = { version = "0.7.0", features = ["lb", "proxy", "openssl"] }
async-trait = "0.1"
bytes = "1"
serde = { version = "1", features = ["derive", "rc"] }
serde_yaml = "0.9"
http = "1.4.0"
arc-swap = "1.8.0"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
rcgen = "0.14.7"
log = "0.4.29"
env_logger = "0.11.8"
dashmap = "6.1.0"
x509-parser = "0.18.0"
openssl = "0.10.75"
flate2 = "1.0"
hickory-resolver = { version = "0.24", features = ["tokio", "tokio-runtime"] }

# optional dependencies
jokoway-acme = { path = "../jokoway-acme", version = "0.1.0-alpha.1", optional = true }
axum = { version = "0.8", optional = true }
tower_governor = { version = "0.8", optional = true }
base64 = { version = "0.22", optional = true }
utoipa = { version = "5.4.0", features = [
    "axum_extras",
    "yaml",
], optional = true }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"], optional = true }

[features]
default = ["compress-extension", "api-extension", "acme-extension"]
compress-extension = ["compress-zstd", "compress-brotli"]
api-extension = [
    "dep:axum",
    "dep:tower_governor",
    "dep:base64",
    "dep:utoipa",
    "dep:utoipa-swagger-ui",
]
acme-extension = ["dep:jokoway-acme"]
compress-zstd = ["jokoway-compress/zstd"]
compress-brotli = ["jokoway-compress/brotli"]

[dev-dependencies]
futures-util = "0.3.31"
pingora = "0.7.0"
reqwest = { version = "0.13.2", features = ["json"] }
tokio-openssl = "0.6.5"
tokio-tungstenite = "0.28.0"
wiremock = "0.6.5"
