[package]
name = "jokoway"
version = "0.1.0-alpha.5"
edition = "2024"
license = "MIT"
description = "Jokoway is a high-performance API Gateway built on Pingora (Rust) with dead-simple YAML configs."
authors = ["Hijriyan <april@kuli.dev>"]
readme = "../README.md"
repository = "https://github.com/hijriyan/jokoway"

[dependencies]
jokoway-core = { path = "../jokoway-core", version = "0.1.0-alpha.4" }
jokoway-rules = { path = "../jokoway-rules", version = "0.1.0-alpha.1" }
jokoway-transformer = { path = "../jokoway-transformer", version = "0.1.0-alpha.1" }
pingora = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
http = { workspace = true }
arc-swap = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
rcgen = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
dashmap = { workspace = true }
x509-parser = { workspace = true }
boring = { workspace = true }
flate2 = { workspace = true }
hickory-resolver = { workspace = true }

# optional dependencies
jokoway-acme = { path = "../jokoway-acme", version = "0.1.0-alpha.4", optional = true }
jokoway-compress = { path = "../jokoway-compress", version = "0.1.0-alpha.4", optional = true }
axum = { workspace = true, optional = true }
tower_governor = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }
utoipa-swagger-ui = { workspace = true, optional = true }

[features]
default = ["compress-extension", "api-extension", "acme-extension"]
compress-extension = ["compress-zstd", "compress-brotli"]
api-extension = [
    "dep:axum",
    "dep:tower_governor",
    "dep:base64",
    "dep:utoipa",
    "dep:utoipa-swagger-ui",
    "jokoway-core/api-extension",
]
acme-extension = ["dep:jokoway-acme"]
acme_tests = ["acme-extension", "jokoway-acme/pebble_tests"]
compress-zstd = ["jokoway-compress/zstd"]
compress-brotli = ["jokoway-compress/brotli"]

[dev-dependencies]
futures-util = "0.3.31"
pingora = "0.7.0"
reqwest = { version = "0.13.2", features = ["json"] }
tokio-boring = "4"
tokio-tungstenite = "0.28.0"
wiremock = "0.6.5"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
serde_yaml = "0.9"
