[package]
name = "jokoway"
version = "0.1.0-alpha.6"
edition = "2024"
license = "MIT"
description = "Jokoway is a high-performance API Gateway built on Pingora (Rust) with dead-simple YAML configs."
authors = ["Hijriyan <april@kuli.dev>"]
readme = "../README.md"
repository = "https://github.com/hijriyan/jokoway"

[dependencies]
jokoway-core = { path = "../jokoway-core", version = "0.1.0-alpha.5" }
jokoway-rules = { path = "../jokoway-rules", version = "0.1.0-alpha.2" }
jokoway-transformer = { path = "../jokoway-transformer", version = "0.1.0-alpha.2" }
pingora = { workspace = true }
async-trait = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
http = { workspace = true }
arc-swap = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
rcgen = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
dashmap = { workspace = true }
x509-parser = { workspace = true }
boring = { workspace = true }
flate2 = { workspace = true }
hickory-resolver = { workspace = true }

# optional dependencies
jokoway-acme = { path = "../jokoway-acme", version = "0.1.0-alpha.5", optional = true }
jokoway-compress = { path = "../jokoway-compress", version = "0.1.0-alpha.5", optional = true }
jokoway-forwarded = { path = "../jokoway-forwarded", version = "0.1.0-alpha.1", optional = true }
axum = { workspace = true, optional = true }
tower_governor = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
utoipa = { workspace = true, optional = true }
utoipa-swagger-ui = { workspace = true, optional = true }
matchit = { workspace = true }

[features]
default = ["compress", "api", "acme", "forwarded"]
compress = ["dep:jokoway-compress", "compress-zstd", "compress-brotli"]
api = [
    "dep:axum",
    "dep:tower_governor",
    "dep:base64",
    "dep:utoipa",
    "dep:utoipa-swagger-ui",
    "jokoway-core/api",
]
acme = ["dep:jokoway-acme"]
acme_tests = ["acme", "jokoway-acme/pebble_tests"]
compress-zstd = ["jokoway-compress/zstd"]
compress-brotli = ["jokoway-compress/brotli"]
forwarded = ["dep:jokoway-forwarded"]

[dev-dependencies]
futures-util = "0.3.31"
pingora = "0.8.0"
reqwest = { version = "0.13.2", features = ["json"] }
tokio-boring = "4"
tokio-tungstenite = "0.28.0"
wiremock = "0.6.5"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
serde_yaml = "0.9"
